objects/Player__c.object
<CustomObject>
    <description>Person who plays soccer</description>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Email; should be unique.</description>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is active?</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team, player is related to</description>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Players</relationshipLabel>
        <relationshipName>Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Team_Email</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Email__c )</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Add email</errorMessage>
    </validationRules>
</CustomObject>